feat: implement asynchronous message processing with dedicated worker threads for output adapters
This change refactors the output adapter component to use a dedicated worker thread for each adapter, enabling asynchronous message processing. The implementation introduces a queue-based system where each adapter has its own blocking queue and worker thread to handle message transmission independently. This improves throughput and prevents blocking of the main processing pipeline when sending messages to external systems. The change also includes enhanced error handling and connection management for HTTP output adapters.